Bai 2- Froggy - Finish Pond 2, Pond 3

--- a/froggy.html
+++ b/froggy.html
@@ -36,6 +36,18 @@
             <figcaption>Hoàn thành Pond số 1</figcaption>
           </figure>
 
+          <!-- Pond 2 -->
+          <figure>
+            <img src="./assets/img/pond-2.jpg" alt="Hoàn thành Pond số 2" />
+            <figcaption>Hoàn thành Pond số 2</figcaption>
+          </figure>
+
+          <!-- Pond 1 -->
+          <figure>
+            <img src="./assets/img/pond-3.png" alt="Hoàn thành Pond số 3" />
+            <figcaption>Hoàn thành Pond số 3</figcaption>
+          </figure>
+
           <!-- Pond 4 -->
           <figure>
             <img src="./assets/img/pond-4.jpg" alt="Hoàn thành Pond số 4" />
