Update - Chua bai

--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
               <div class="header-right">
                 <!-- navbar -->
                 <ul class="navbar">
-                  <li><a href="./">Home</a></li>
-                  <li><a href="./">COURSES</a></li>
-                  <li><a href="./">EVENTS</a></li>
-                  <li><a href="./">Pages</a></li>
-                  <li><a href="./">PORTFOLIO</a></li>
-                  <li><a href="./">BLOG</a></li>
-                  <li><a href="./">SHOP</a></li>
-                  <li><a href="./">Contact</a></li>
+                  <li><a href="#!">Home</a></li>
+                  <li><a href="#!">COURSES</a></li>
+                  <li><a href="#!">EVENTS</a></li>
+                  <li><a href="#!">Pages</a></li>
+                  <li><a href="#!">PORTFOLIO</a></li>
+                  <li><a href="#!">BLOG</a></li>
+                  <li><a href="#!">SHOP</a></li>
+                  <li><a href="#!">Contact</a></li>
                 </ul>
 
                 <!-- User action -->
@@ -90,7 +90,7 @@
                 <h1>COURSES</h1>
                 <ul class="breadcrumbs">
                   <li>
-                    <a href="./">Home</a>
+                    <a href="#!">Home</a>
                   </li>
                   <li>
                     <span>Courses</span>
@@ -119,40 +119,40 @@
               <div class="course-list">
                 <h3>Topics</h3>
                 <ul>
-                  <li><a href="./">Web Design</a></li>
-                  <li><a href="./">Web Development</a></li>
-                  <li><a href="./">Data Science</a></li>
-                  <li><a href="./">Mathematics & Stats</a></li>
-                  <li><a href="./">Robotics</a></li>
-                  <li><a href="./">Digital Marketing</a></li>
-                  <li><a href="./">Android Basics</a></li>
-                  <li><a href="./">Machine Learning</a></li>
-                  <li><a href="./">Artificial Intelligence</a></li>
+                  <li><a href="#!">Web Design</a></li>
+                  <li><a href="#!">Web Development</a></li>
+                  <li><a href="#!">Data Science</a></li>
+                  <li><a href="#!">Mathematics & Stats</a></li>
+                  <li><a href="#!">Robotics</a></li>
+                  <li><a href="#!">Digital Marketing</a></li>
+                  <li><a href="#!">Android Basics</a></li>
+                  <li><a href="#!">Machine Learning</a></li>
+                  <li><a href="#!">Artificial Intelligence</a></li>
                 </ul>
               </div>
 
               <div class="course-list">
                 <h3>Software</h3>
                 <ul>
-                  <li><a href="./">Photoshop</a></li>
-                  <li><a href="./">Illustrator</a></li>
-                  <li><a href="./">HTML</a></li>
-                  <li><a href="./">CSS</a></li>
-                  <li><a href="./">Java Script</a></li>
-                  <li><a href="./">DJango</a></li>
-                  <li><a href="./">Apple</a></li>
-                  <li><a href="./">Microsoft</a></li>
-                  <li><a href="./">Ubuntu</a></li>
+                  <li><a href="#!">Photoshop</a></li>
+                  <li><a href="#!">Illustrator</a></li>
+                  <li><a href="#!">HTML</a></li>
+                  <li><a href="#!">CSS</a></li>
+                  <li><a href="#!">Java Script</a></li>
+                  <li><a href="#!">DJango</a></li>
+                  <li><a href="#!">Apple</a></li>
+                  <li><a href="#!">Microsoft</a></li>
+                  <li><a href="#!">Ubuntu</a></li>
                 </ul>
               </div>
 
               <div class="course-list">
                 <h3>Level</h3>
                 <ul>
-                  <li><a href="./">Beginner</a></li>
-                  <li><a href="./">Intermediate</a></li>
-                  <li><a href="./">Advanced</a></li>
-                  <li><a href="./">Expert</a></li>
+                  <li><a href="#!">Beginner</a></li>
+                  <li><a href="#!">Intermediate</a></li>
+                  <li><a href="#!">Advanced</a></li>
+                  <li><a href="#!">Expert</a></li>
                 </ul>
               </div>
             </div>
@@ -161,17 +161,17 @@
             <div class="content">
               <!-- Nav tab -->
               <ul class="nav-tab">
-                <li><a href="./" class="active">New</a></li>
-                <li><a href="./">Trending</a></li>
-                <li><a href="./">Popular</a></li>
-                <li><a href="./">Best-Selling</a></li>
-                <li><a href="./">Most Rated</a></li>
+                <li><a href="#!" class="active">New</a></li>
+                <li><a href="#!">Trending</a></li>
+                <li><a href="#!">Popular</a></li>
+                <li><a href="#!">Best-Selling</a></li>
+                <li><a href="#!">Most Rated</a></li>
               </ul>
 
               <!-- Card List -->
               <div class="list-card">
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <img
                       src="./assets/img/7.jpg"
                       alt="Introduction to PHP language with Ajax & Redux"
@@ -180,7 +180,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to PHP language with Ajax & Redux</a
                       >
                     </h4>
@@ -204,14 +204,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./" class="free">Free</a>
+                        <a href="#!" class="free">Free</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <div class="icon-top-right">
                       <i class="fa fa-solid fa-bolt"></i>
                     </div>
@@ -223,7 +223,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to DJango Ling with Remax options</a
                       >
                     </h4>
@@ -247,14 +247,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./">$29</a>
+                        <a href="#!">$29</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <img
                       src="./assets/img/9.jpg"
                       alt="Introduction to DJango Ling with Remax options"
@@ -263,7 +263,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to DJango Ling with Remax options</a
                       >
                     </h4>
@@ -287,14 +287,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./">$39</a>
+                        <a href="#!">$39</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <img
                       src="./assets/img/7.jpg"
                       alt="Introduction to PHP language with Ajax & Redux"
@@ -303,7 +303,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to PHP language with Ajax & Redux</a
                       >
                     </h4>
@@ -327,14 +327,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./" class="free">Free</a>
+                        <a href="#!" class="free">Free</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <div class="icon-top-right">
                       <i class="fa fa-solid fa-bolt"></i>
                     </div>
@@ -346,7 +346,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to DJango Ling with Remax options</a
                       >
                     </h4>
@@ -370,14 +370,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./">$29</a>
+                        <a href="#!">$29</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <img
                       src="./assets/img/9.jpg"
                       alt="Introduction to DJango Ling with Remax options"
@@ -386,7 +386,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to DJango Ling with Remax options</a
                       >
                     </h4>
@@ -410,14 +410,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./">$39</a>
+                        <a href="#!">$39</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <img
                       src="./assets/img/7.jpg"
                       alt="Introduction to PHP language with Ajax & Redux"
@@ -426,7 +426,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to PHP language with Ajax & Redux</a
                       >
                     </h4>
@@ -450,14 +450,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./" class="free">Free</a>
+                        <a href="#!" class="free">Free</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <div class="icon-top-right">
                       <i class="fa fa-solid fa-bolt"></i>
                     </div>
@@ -469,7 +469,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to DJango Ling with Remax options</a
                       >
                     </h4>
@@ -493,14 +493,14 @@
                       </div>
 
                       <div class="price">
-                        <a href="./">$29</a>
+                        <a href="#!">$29</a>
                       </div>
                     </div>
                   </div>
                 </div>
 
                 <div class="item-card">
-                  <a href="./" class="item-card__img">
+                  <a href="#!" class="item-card__img">
                     <img
                       src="./assets/img/9.jpg"
                       alt="Introduction to DJango Ling with Remax options"
@@ -509,7 +509,7 @@
 
                   <div class="item-card__content">
                     <h4 class="item-card__title">
-                      <a href="./"
+                      <a href="#!"
                         >Introduction to DJango Ling with Remax options</a
                       >
                     </h4>
@@ -533,7 +533,7 @@
                       </div>
 
                       <div class="price">
-                        <a href="./">$39</a>
+                        <a href="#!">$39</a>
                       </div>
                     </div>
                   </div>
@@ -542,10 +542,10 @@
 
               <!-- Navigation -->
                <ul class="navigation">
-                <li><a href="./" class="active">1</a></li>
-                <li><a href="./">2</a></li>
-                <li><a href="./">3</a></li>
-                <li><a href="./" class="next">Next</a></li>
+                <li><a href="#!" class="active">1</a></li>
+                <li><a href="#!">2</a></li>
+                <li><a href="#!">3</a></li>
+                <li><a href="#!" class="next">Next</a></li>
                </ul>
             </div>
           </div>
@@ -569,12 +569,12 @@
               <p>© 2017 Scholars Inc. All rights reserved</p>
               <ul class="footer-app">
                 <li>
-                  <a href="./">
+                  <a href="#!">
                     <img src="./assets/img/android.png" alt="App Store">
                   </a>
                 </li>
                 <li>
-                  <a href="./">
+                  <a href="#!">
                     <img src="./assets/img/apple.png" alt="Google Play">
                   </a>
                 </li>
@@ -583,33 +583,33 @@
             <div class="footer-list footer-item">
               <h3>Scholars</h3>
               <ul>
-                <li><a href="./">About Us</a></li>
-                <li><a href="./">Leadership</a></li>
-                <li><a href="./">Careers</a></li>
-                <li><a href="./">FAQ</a></li>
-                <li><a href="./">Contact</a></li>
+                <li><a href="#!">About Us</a></li>
+                <li><a href="#!">Leadership</a></li>
+                <li><a href="#!">Careers</a></li>
+                <li><a href="#!">FAQ</a></li>
+                <li><a href="#!">Contact</a></li>
               </ul>
             </div>
 
             <div class="footer-list footer-item">
               <h3>Product</h3>
               <ul>
-                <li><a href="./">Education Light</a></li>
-                <li><a href="./">Education Starter</a></li>
-                <li><a href="./">Education Premium</a></li>
-                <li><a href="./">Business</a></li>
-                <li><a href="./">Business Plus</a></li>
+                <li><a href="#!">Education Light</a></li>
+                <li><a href="#!">Education Starter</a></li>
+                <li><a href="#!">Education Premium</a></li>
+                <li><a href="#!">Business</a></li>
+                <li><a href="#!">Business Plus</a></li>
               </ul>
             </div>
 
             <div class="footer-list footer-item">
               <h3>Support</h3>
               <ul>
-                <li><a href="./">Support</a></li>
-                <li><a href="./">Toll Free Number</a></li>
-                <li><a href="./">Open Ticket</a></li>
-                <li><a href="./">System Requirements</a></li>
-                <li><a href="./">Feedback</a></li>
+                <li><a href="#!">Support</a></li>
+                <li><a href="#!">Toll Free Number</a></li>
+                <li><a href="#!">Open Ticket</a></li>
+                <li><a href="#!">System Requirements</a></li>
+                <li><a href="#!">Feedback</a></li>
               </ul>
             </div>
 
