--- a/index.html
+++ b/index.html
@@ -54,22 +54,84 @@
               <div class="header-right">
                 <!-- navbar -->
                 <ul class="navbar">
-                  <li><a href="#!">Home</a></li>
-                  <li><a href="#!">COURSES</a></li>
-                  <li><a href="#!">EVENTS</a></li>
-                  <li><a href="#!">Pages</a></li>
-                  <li><a href="#!">PORTFOLIO</a></li>
-                  <li><a href="#!">BLOG</a></li>
-                  <li><a href="#!">SHOP</a></li>
-                  <li><a href="#!">Contact</a></li>
+                  <li>
+                    <a href="#!">Home</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">Home version one</a></li>
+                      <li><a href="#!">Home version Two</a></li>
+                      <li><a href="#!">Home video background</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">COURSES</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">Course 2 Column</a></li>
+                      <li><a href="#!">Course 3 Column</a></li>
+                      <li><a href="#!">Course Details</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">EVENTS</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">Event List</a></li>
+                      <li><a href="#!">Event Grid</a></li>
+                      <li><a href="#!">Event Single</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">Pages</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">Our teachers</a></li>
+                      <li><a href="#!">teachers profile</a></li>
+                      <li><a href="#!">About Us</a></li>
+                      <li><a href="#!">Error page</a></li>
+                      <li><a href="#!">FAQ Page</a></li>
+                      <li><a href="#!">Login</a></li>
+                      <li><a href="#!">sign up</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">PORTFOLIO</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">portfolio 2 column</a></li>
+                      <li><a href="#!">portfolio 3 column</a></li>
+                      <li><a href="#!">portfolio 4 column</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">BLOG</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">Blog</a></li>
+                      <li><a href="#!">Blog details</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">SHOP</a>
+                    <ul class="sub-menu">
+                      <li><a href="#!">Shop Page</a></li>
+                      <li><a href="#!">Shop Details</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="#!">Contact</a>
+                  </li>
                 </ul>
 
                 <!-- User action -->
                 <ul class="user-action">
                   <li>
                     <button>
-                      <i class="flaticon-search"></i>
+                      <label for="show-form-search">
+                        <i class="flaticon-search"></i>
+                      </label>
                     </button>
+                    <input type="checkbox" id="show-form-search" hidden>
+                    <form action="" class="form-search">
+                      <input type="text" placeholder="Search....">
+                      <button>
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                      </button>
+                    </form>
                   </li>
                   <li>
                     <button class="icon-cart">
