--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
               <div class="col-lg-8 col-xl-9">
                 <div class="content">
                   <!-- Nav tab -->
-                  <ul class="nav-tab">
+                  <ul class="course-nav-tab">
                     <li><a href="#!" class="active">New</a></li>
                     <li><a href="#!">Trending</a></li>
                     <li><a href="#!">Popular</a></li>
