Update Title  Course page

--- a/index.html
+++ b/index.html
@@ -240,16 +240,13 @@
           <div class="container">
             <div class="inner">
               <div class="main-title">
-                <h1>Shop</h1>
+                <h1>Courses</h1>
                 <ul class="breadcrumbs">
                   <li>
                     <a href="#!">Home</a>
                   </li>
                   <li>
-                    <a href="#!">Pages</a>
-                  </li>
-                  <li>
-                    <span>Shop</span>
+                    <span>Courses</span>
                   </li>
                 </ul>
               </div>
